# advent-of-code

./: .gitignore  Cargo.toml  README.md  go.mod
src/2023/day1/1/: solution.py
src/2023/day1/2/: solution.py
src/2023/day10/1/: solution.py  solution2.py
src/2023/day11/1/: solution.py
src/2023/day11/2/: solution.py  solution2.py  solution3.py
src/2023/day12/1/: solution.py
src/2023/day12/2/: solution.py
src/2023/day13/1/: solution.py
src/2023/day13/2/: solution.py
src/2023/day14/1/: solution.py
src/2023/day14/2/: counts.txt  results.txt  solution.py
src/2023/day15/1/: solution.py
src/2023/day15/2/: solution.py
src/2023/day16/1/: solution.py
src/2023/day17/1/: solution.py
src/2023/day2/1/: solution.py
src/2023/day2/2/: solution.py
src/2023/day3/1/: solution.py
src/2023/day3/2/: solution.py
src/2023/day4/1/: solution.py
src/2023/day4/2/: s.py  solution.py
src/2023/day5/1/: solution.py
src/2023/day5/2/: s.py  solution.py
src/2023/day6/1/: data.txt  solution.py
src/2023/day6/2/: solution.py
src/2023/day7/1/: s.py  solution.py
src/2023/day7/2/: s.py  solution.py
src/2023/day8/1/: s.py  solution.py
src/2023/day8/2/: s.py  solution.py
src/2023/day9/1/: solution.py
src/2023/day9/2/: solution.py
src/2024/day03/1/: main.go  main.rs  solution.py
src/2024/day03/2/: main.go  main.rs  solution.py
src/2024/day04/1/: main.go  main.rs  solution.py
src/2024/day04/2/: main.go  main.rs  solution.py
src/2024/day05/1/: main.go  main.rs  solution.py
src/2024/day05/2/: main.go  main.rs  solution.py
src/2024/day06/1/: main.go  main.rs  solution.py
src/2024/day06/2/: main.go  main.rs  solution.py
src/2024/day07/1/: main.go  solution.py
src/2024/day07/2/: solution.py
src/2024/day08/1/: solution.py
src/2024/day08/2/: solution.py
src/2024/day09/1/: solution.py
src/2024/day09/2/: solution.py
src/2024/day1/1/: main.go  main.rs  solution.py
src/2024/day1/2/: main.go  main.rs  solution.py
src/2024/day10/1/: solution.py
src/2024/day10/2/: solution.py
src/2024/day11/1/: solution.py
src/2024/day11/2/: main.go  main.rs  solution.py
src/2024/day12/1/: solution.py
src/2024/day12/2/: solution.py
src/2024/day13/1/: solution.py
src/2024/day13/2/: solution.py
src/2024/day14/1/: solution.py
src/2024/day14/2/: solution.py
src/2024/day15/1/: solution.py
src/2024/day16/1/: solution.py
src/2024/day16/2/: solution.py
src/2024/day17/1/: solution.py
src/2024/day17/2/: solution.py
src/2024/day19/1/: solution.py
src/2024/day19/2/: solution.py
src/2024/day2/1/: main.go  main.rs  solution.py
src/2024/day2/2/: main.go  main.rs  solution.py
src/2024/day22/1/: solution.py
(+22 files in other folders)
