[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"


[dependencies]

[[bin]]
name = "aoc-2024-day1-1"
path = "src/2024/day1/1/main.rs"

[[bin]]
name = "aoc-2024-day1-2"
path = "src/2024/day1/2/main.rs"

[[bin]]
name = "aoc-2024-day2-1"
path = "src/2024/day2/1/main.rs"

[[bin]]
name = "aoc-2024-day2-2"
path = "src/2024/day2/2/main.rs"
