[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"


[dependencies]
regex = "1.11.1"
rayon = "1.10.0"

[[bin]]
name = "aoc-2024-day1-1"
path = "src/2024/day1/1/main.rs"

[[bin]]
name = "aoc-2024-day1-2"
path = "src/2024/day1/2/main.rs"

[[bin]]
name = "aoc-2024-day2-1"
path = "src/2024/day2/1/main.rs"

[[bin]]
name = "aoc-2024-day2-2"
path = "src/2024/day2/2/main.rs"

[[bin]]
name = "aoc-2024-day3-1"
path = "src/2024/day03/1/main.rs"

[[bin]]
name = "aoc-2024-day3-2"
path = "src/2024/day03/2/main.rs"

[[bin]]
name = "aoc-2024-day4-1"
path = "src/2024/day04/1/main.rs"

[[bin]]
name = "aoc-2024-day4-2"
path = "src/2024/day04/2/main.rs"

[[bin]]
name = "aoc-2024-day5-1"
path = "src/2024/day05/1/main.rs"

[[bin]]
name = "aoc-2024-day5-2"
path = "src/2024/day05/2/main.rs"

[[bin]]
name = "aoc-2024-day6-1"
path = "src/2024/day06/1/main.rs"

[[bin]]
name = "aoc-2024-day6-2"
path = "src/2024/day06/2/main.rs"

[[bin]]
name = "aoc-2024-day7-1"
path = "src/2024/day07/1/main.rs"

[[bin]]
name = "aoc-2024-day7-2"
path = "src/2024/day07/2/main.rs"

[[bin]]
name = "aoc-2024-day8-1"
path = "src/2024/day08/1/main.rs"

[[bin]]
name = "aoc-2024-day8-2"
path = "src/2024/day08/2/main.rs"

[[bin]]
name = "aoc-2024-day9-1"
path = "src/2024/day09/1/main.rs"

[[bin]]
name = "aoc-2024-day9-2"
path = "src/2024/day09/2/main.rs"

[[bin]]
name = "aoc-2024-day10-1"
path = "src/2024/day10/1/main.rs"

[[bin]]
name = "aoc-2024-day10-2"
path = "src/2024/day10/2/main.rs"

[[bin]]
name = "aoc-2024-day11-1"
path = "src/2024/day11/1/main.rs"

[[bin]]
name = "aoc-2024-day11-2"
path = "src/2024/day11/2/main.rs"

[[bin]]
name = "aoc-2024-day12-1"
path = "src/2024/day12/1/main.rs"
